public interface IPaintable {

    Vector2D getPosition();
    String getModelName();

}
